protocols/tests/brave_new_world/use_without_valid/use_without_valid_bug.out
error: The two expressions did not evaluate to the same value (in transaction `use_without_valid(5, 5)`)
   ┌─ brave_new_world/use_without_valid/use_without_valid.prot:16:15
   │
16 │     assert_eq(data_out, dut.sum);
   │               ^^^^^^^^^^^^^^^^^ LHS Value: 5, RHS Value: 15

Trace 0 execution failed.
